--- a/html/Ecommerece/login-form/about.html
+++ b/html/Ecommerece/login-form/about.html
@@ -31,20 +31,12 @@
                 <h1>About Me</h1>
                 <div class="members-section">
                     <div class="member-box">
-                        <h2>Ansh Singhal</h2>
+                        <h2>Shruti Verma</h2>
                         <p>Frontend Developer</p>
                     </div>
-                    </div>
-                    <div class="members-section">
-                        <div class="member-box">
-                            <h2>Bhoomi Chhetry</h2>
-                            <p>Frontend Developer</p>
-                        </div>
-                        </div>
-                 </div>
+                </div>
             </div>
         </div>
-       
     </main>
 
     <footer>
@@ -52,3 +44,4 @@
     </footer>
 </body>
 </html>
+
